@@ -80,30 +80,105 @@ CUL_EM_Parse($$)
   my @a = split("", $msg);
   my $tpe = ($a[1].$a[2])+0;
   my $cde = ($a[3].$a[4])+0;
-  my $cnt = hex($a[5].$a[6]);
-  my $cum = hex($a[ 9].$a[10].$a[ 7].$a[ 8]);
-  my $lst = hex($a[13].$a[14].$a[11].$a[12]);
-  my $top = hex($a[17].$a[18].$a[15].$a[16]);
+  my $seqno = hex($a[5].$a[6]);
+  my $total_cnt = hex($a[ 9].$a[10].$a[ 7].$a[ 8]);
+  my $current_cnt = hex($a[13].$a[14].$a[11].$a[12]);
+  my $peak_cnt = hex($a[17].$a[18].$a[15].$a[16]);
+
+  # these are the raw readings from the device
   my $val = sprintf("CNT: %d CUM: %d  5MIN: %d  TOP: %d",
-                $cnt, $cum, $lst, $top);
+                $seqno, $total_cnt, $current_cnt, $peak_cnt);
+
+
+  # seqno    =  number of received datagram in sequence, runs from 2 to 255
+  # total_cnt=  total (cumulated) value in ticks as read from the device
+  # basis_cnt=  correction to total (cumulated) value in ticks to account for
+  #             counter wraparounds
+  # total    =  total (cumulated) value in device units
+  # current  =  current value (average over latest 5 minutes) in device units
+  # peak     =  maximum value in device units
 
   if($defptr{$cde}) {
     $hash = $defptr{$cde};
-    my $corr1 = $hash->{corr1}; # EMEM power correction factor
-    my $corr2 = $hash->{corr2}; # EMEM energy correction factor
-    $cum *= $corr2;
-    $lst *= $corr1;
-    $top *= $corr1;
-    $val = sprintf("CNT: %d  CUM: %0.3f  5MIN: %0.3f  TOP: %0.3f",
-                        $cnt, $cum, $lst, $top);
+
+
+    # count changes
+    my $c= 0;
+
+    # set state to raw readings
     my $n = $hash->{NAME};
     Log GetLogLevel($n,1), "CUL_EM $n: $val";
     $hash->{STATE} = $val;
+    $hash->{CHANGED}[$c++] = $val;
 
-    $hash->{CHANGED}[0] = $val;
-    $hash->{STATE} = $val;
-    $hash->{READINGS}{state}{TIME} = TimeNow();
+
+    #
+    # calculate readings
+    #
+
+    # current time
+    my $tn = TimeNow();
+
+    # update sequence number reading
+    $hash->{READINGS}{seqno}{TIME} = $tn;
+    $hash->{READINGS}{seqno}{VAL} = $seqno;
+    $hash->{CHANGED}[$c++] = "seqno: $seqno";
+
+    # update raw readings
+    $hash->{READINGS}{state}{TIME} = $tn;
     $hash->{READINGS}{state}{VAL} = $val;
+    $hash->{CHANGED}[$c++] = "state: $val";
+
+    # initialize total_cnt_last
+    my $total_cnt_last;
+    if(defined($hash->{READINGS}{total_cnt})) {
+        $total_cnt_last= $hash->{READINGS}{total_cnt}{VAL};
+    } else {
+        $total_cnt_last= 0;
+    }
+
+    # update total_cnt reading
+    $hash->{READINGS}{total_cnt}{TIME} = $tn;
+    $hash->{READINGS}{total_cnt}{VAL} = $total_cnt;
+    $hash->{CHANGED}[$c++] = "total_cnt: $total_cnt";
+
+    # initialize basis_cnt_last
+    my $basis_cnt_last;
+    if(defined($hash->{READINGS}{basis_cnt})) {
+        $basis_cnt_last= $hash->{READINGS}{basis}{VAL};
+    } else {
+        $basis_cnt_last= 0;
+    }
+
+    # correct counter wraparound
+    my $basis_cnt= $basis_cnt_last;
+    if($total_cnt< $total_cnt_last) {
+        $basis_cnt+= 65536;
+        # update basis_cnt
+        $hash->{READINGS}{basis}{TIME}= $tn;
+        $hash->{READINGS}{basis}{VAL} = $basis_cnt;
+        $hash->{CHANGED}[$c++] = "basis: $basis_cnt";
+    }
+
+    #
+    # translate into device units
+    #
+    my $corr1 = $hash->{corr1}; # EMEM power correction factor
+    my $corr2 = $hash->{corr2}; # EMEM energy correction factor
+
+    my $total    = ($basis_cnt+$total_cnt)*$corr2;
+    my $current  = $current_cnt*$corr1;
+    my $peak     = $peak_cnt*$corr1;
+
+    $hash->{CHANGED}[$c++] = "total: $total";
+    $hash->{READINGS}{total}{TIME} = $tn;
+    $hash->{READINGS}{total}{VAL} = $total;
+    $hash->{CHANGED}[$c++] = "current: $current";
+    $hash->{READINGS}{current}{TIME} = $tn;
+    $hash->{READINGS}{current}{VAL} = $current;
+    $hash->{CHANGED}[$c++] = "peak: $peak";
+    $hash->{READINGS}{peak}{TIME} = $tn;
+    $hash->{READINGS}{peak}{VAL} = $peak;
 
     return $hash->{NAME};
 
